--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <!-- NAVBAR 1 -->
-    <nav>
-        <ul>
-            <li>HOME</li>
-            <li>ABOUT ME</li>
-            <li>CONTACT ME</li>
+    <nav> 
+        <ul> 
+            <li><b>HOME</b></li>
+            <li><b>ABOUT ME</b></li>
+            <li><b>CONTACT ME</b></li>
         </ul>
     </nav>
     <!-- NAVBAR 1 -->
