--- a/index.html
+++ b/index.html
@@ -21,14 +21,21 @@
         </ul>
     </nav>
     <!-- NAVBAR 1 -->
+    
     <!-- HEADER 1 -->
     <div class="header">
         <h4 class="judul1">Hi,i am....</h4>
         <h1 class="judul2">programmer</h1>
     </div>
     <!-- HEADER 1 -->
+    
     <!-- CONTENT 1 -->
     <P></P>
     <!-- CONTENT 1 -->
+
+    <!-- FOOTER -->
+
+
+    <!-- FOOTER -->
 </body>
 </html>
