--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </style>
     <!-- cara menghubungkan css eksternal ke html -->
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 </head>
 <body>
     <!-- NAVBAR 1 -->
@@ -25,7 +26,12 @@
     <!-- HEADER 1 -->
     <div class="header">
         <h4 class="judul1">Hi,i am....</h4>
-        <h1 class="judul2">programmer</h1>
+        <h1 class="judul2">Adimas fandy Bagus p</h1>
+        <h2 class="jobs">programmer</h2>
+        <a href="" target="_blank" class="link-tombol-download"><i class="fa fa-download"></i> Download CV</a>
+        <a href="" target="_blank" class="link-tombol-download">Contact me
+        </a>
+
     </div>
     <!-- HEADER 1 -->
     
@@ -36,5 +42,7 @@
     <!-- FOOTER -->
 
     <!-- FOOTER -->
+    <!-- script untuk icons -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js"></script>
 </body>
 </html>
