--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
     <!-- cara menghubungkan css eksternal ke html -->
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <!-- NAVBAR 1 -->
@@ -29,20 +29,78 @@
         <h1 class="judul2">Adimas fandy Bagus p</h1>
         <h2 class="jobs">programmer</h2>
         <a href="" target="_blank" class="link-tombol-download"><i class="fa fa-download"></i> Download CV</a>
-        <a href="" target="_blank" class="link-tombol-download">Contact me
+        <a href="" target="_blank" class="link-tombol-download"><i class="fa fa-phone"></i> Contact me
         </a>
 
     </div>
     <!-- HEADER 1 -->
     
     <!-- CONTENT 1 -->
-    <P></P>
+    <div id="aboutme">
+        <h2>---TENTANG SAYA---</h2>
+        <div class="container">
+            <div class="box1">
+                <img src="assets/image/1.jpg" width="200" class="frame">
+            </div>
+            <div class="box2">
+                <p>
+                    Saya lulusan baru dengan gelar Sarjana Teknologi Informasi yang berkomitmen 
+					untuk mengembangkan karier di bidang IT. Memiliki pemahaman yang kuat dalam pemrograman 
+					dan teknologi informasi, kemampuan analitis yang baik untuk memecahkan masalah, serta ingin
+					terus berinovasi dalam pengembangan teknologi.
+                </p>
+                <table>
+                    <tr>
+                        <td>Nama</td>
+                        <td>: adimas fandy bagus prasetyo</td>
+                    </tr>
+                    <tr>
+                        <td>Nomor telfon</td>
+                        <td>: 0821-3193-0787</td>
+                    </tr>
+                    <tr>
+                        <td>Email</td>
+                        <td>: kfandy44@gmail.com</td>
+                    </tr>
+                    <tr>
+                        <td>lulusan</td>
+                        <td>: s2 teknologi informasi its</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
     <!-- CONTENT 1 -->
+    <div class="skill">
+        <h2>- - - Keahlian saya - - -</h2>
+        <div class="container">
+            <div class="box2">
+                <p>Microsoft Office</p>
+                <progress value="80" max="100"></progress>80%
+                <P>HTML,CSS</P>
+                <progress value="70" max="100"></progress>70%
+                <p>java</p>
+                <progress value="50" max="100"></progress>50%
+            </div>
+        </div>
+    </div>
 
     <!-- FOOTER -->
-
+    <footer>
+        <div class="kiri">
+            Copyright &copy; by Adimas
+        </div>
+        <div class="kanan">
+            Find Me :
+            <a href="https://www.instagram.com/hajimesaito2/?next=%2F" target="_blank"><i class="fas fa-users"></i> Instragram</a>
+            <a href="https://www.facebook.com/rohan.geluran" target="_blank"><i class="fas fa-hashtag"></i> Facebook</a>
+        </div>
+        </div>
+    </footer>
+   
     <!-- FOOTER -->
+   
     <!-- script untuk icons -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
 </body>
 </html>
