--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <h1 class="judul2">Adimas fandy Bagus p</h1>
         <h2 class="jobs">programmer</h2>
         <a href="" target="_blank" class="link-tombol-download"><i class="fa fa-download"></i> Download CV</a>
-        <a href="" target="_blank" class="link-tombol-download"><i class="fa fa-phone"></i> Contact me
-        </a>
+        <a href="https://wa.me/082131930787?text=tetap semangat dalam hidup ini jangan lupa bersyukur untuk hari yang sudah di lalui,jangan lua sholawat supaya harimu menyenangkan
+        " target="_blank" class="link-tombol-download"><i class="fa fa-phone"></i> Contact me</a>
 
     </div>
     <!-- HEADER 1 -->
@@ -55,7 +55,7 @@
                         <td>: adimas fandy bagus prasetyo</td>
                     </tr>
                     <tr>
-                        <td>Nomor telfon</td>
+                        <td>Nomor telepon</td>
                         <td>: 0821-3193-0787</td>
                     </tr>
                     <tr>
@@ -63,8 +63,8 @@
                         <td>: kfandy44@gmail.com</td>
                     </tr>
                     <tr>
-                        <td>lulusan</td>
-                        <td>: s2 teknologi informasi its</td>
+                        <td>Lulusan</td>
+                        <td>: S2 Teknologi Informasi ITS</td>
                     </tr>
                 </table>
             </div>
@@ -72,7 +72,7 @@
     </div>
     <!-- CONTENT 1 -->
     <div class="skill">
-        <h2>- - - Keahlian saya - - -</h2>
+        <h2>- - - MY SKILL - - -</h2>
         <div class="container">
             <div class="box2">
                 <p>Microsoft Office</p>
