--- a/blog.html
+++ b/blog.html
@@ -104,7 +104,8 @@
 <!-- - - - CONTENT - - - 3 -->
 <div class="container3">
     <div class="box5">
-        <a href="https://www.youtube.com/watch?v=S5PUZQJmt2E"><img src="assets/image/CI.png" width="250" height="200" class="frame3"></a></div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RIDA6elhmBU?si=grcdI0_uMW9axqW3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <img src="assets/image/CI.png" width="250" height="200" class="frame3"></div>
     <div class="box6">
         <p>CSS merupakan singkatan dari Cascading Style Sheets, CSS digunakan untuk menentukan gaya dari tampilan website yang akan kamu buat seperti tata letak halaman, warna , dan font. Semuanya dapat ditentukan oleh CSS, CSS bertujuan agar website terlihat lebih menarik.
             Pada dasarnya tanpa menggunakan CSS, tampilan website dapat terlihat menarik hanya dengan bahasa HTML namun penggunaan HTML terbukti tidak efektif jika digunakan untuk design tampilan oleh karena itu CSS dan HTML tidak dapat dipisahkan satu sama lain.</p>
