--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
     <nav> 
         <ul> 
             <a href=""><li><b>HOME</b></li></a>
-            <a href=""><li><b>ABOUT ME</b></li></a>
+            <a href="http://127.0.0.1:5500/index.html"><li><b>ABOUT ME</b></li></a>
             <a href=""><li><b>MY BLOG</b></li></a>
         </ul>
     </nav>
