--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!-- NAVBAR 1 -->
     <nav> 
         <ul> 
-            <li><b>HOME</b></li>
-            <li><b>ABOUT ME</b></li>
-            <li><b>CONTACT ME</b></li>
+            <a href=""><li><b>HOME</b></li></a>
+            <a href=""><li><b>ABOUT ME</b></li></a>
+            <a href="http://127.0.0.1:5500/blog.html"><li><b>MY BLOG</b></li></a>
         </ul>
     </nav>
     <!-- NAVBAR 1 -->
