--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
             <br>
             <p>HTML diciptakan oleh Sir Tim Berners-lee pada akhir tahun 1991 namun tidak dirilis secara resmi. Sir Tim Berners-lee merilis HTML versi pertama pada tahun 1993 dengan tujuan untuk berbagi informasi yang dapat dibaca dan diakses melalui web browser.
                 Hingga saat ini versi HTML sudah mencapai versi 5 yang dirilis pada tahun 2012, Versi HTML 5 ini merupakan terusan dari perpanjangan versi HTML 4.01 yang sebelumnya digunakan oleh kebanyakan orang.</p>
-        <!-- </div>         -->
+            
         </div>        
     </div>
 </div>
@@ -104,13 +104,13 @@
 <!-- - - - CONTENT - - - 3 -->
 <div class="container3">
     <div class="box5">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/RIDA6elhmBU?si=grcdI0_uMW9axqW3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <img src="assets/image/CI.png" width="250" height="200" class="frame3"></div>
     <div class="box6">
         <p>CSS merupakan singkatan dari Cascading Style Sheets, CSS digunakan untuk menentukan gaya dari tampilan website yang akan kamu buat seperti tata letak halaman, warna , dan font. Semuanya dapat ditentukan oleh CSS, CSS bertujuan agar website terlihat lebih menarik.
             Pada dasarnya tanpa menggunakan CSS, tampilan website dapat terlihat menarik hanya dengan bahasa HTML namun penggunaan HTML terbukti tidak efektif jika digunakan untuk design tampilan oleh karena itu CSS dan HTML tidak dapat dipisahkan satu sama lain.</p>
         <br>
     <div class="kiri1">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6cxOfD7IUuI?si=E7XPV_Vz3dFVLlER" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p>Tahun 1994 Hakon Wium Lie bekerja di CERN yang merupakan sebuah perusahaan dimana tempat lahirnya Web dan Web mulai digunakan sebagai platform untuk penerbitan elektronik. Namun, satu bagian penting dari platform web yaitu adalah tidak ada cara untuk menata dokumen seperti tidak adanya cara untuk menggambarkan tata letak seperti surat kabar di halaman Web.Secara resmi, CSS diusulkan pada tahun 1994 sebagai bahasa penataan web untuk memecahkan beberapa masalah Html 4. Ada bahasa penataan lain yang diusulkan saat itu, seperti style page untuk HTML dan JSSS tetapi CSS tidak menyertakan properti di CSS2. Seiring berjalannya waktu, CSS level 2 dikembangkan oleh W3C dan diterbitkan sebagai rekomendasi pada Mei 1998. CSS 2 menyertakan sejumlah kemampuan baru seperti di bawah ini:
             <br>Mutlak
             ,Relatif
@@ -123,6 +123,7 @@
             <br>
         </p>
         <p> Kemudian setelah CSS2 dikembangkan, persiapan peluncuran CSS3 dimulai pada tahun 1998 tetapi di tahun tersebut masih belum selesai. Beberapa bagian masih dikembangkan dan beberapa komponen berfungsi di beberapa browser. CSS3 baru diterbitkan pada bulan Juni 1999. CSS3 dibagi menjadi beberapa dokumen terpisah yang disebut “modul”. Setiap modul menambahkan kemampuan baru atau memperluas fitur yang ditentukan dalam CSS 2.</p>
+    
     </div>    
     </div>
 </div>            
