--- a/blog.html
+++ b/blog.html
@@ -15,9 +15,9 @@
 <!-- - - - NAVBAR - - - -->
     <nav> 
         <ul> 
-            <a href=""><li><b>HOME</b></li></a>
-            <a href="http://127.0.0.1:5500/index.html"><li><b>ABOUT ME</b></li></a>
-            <a href=""><li><b>MY BLOG</b></li></a>
+            <a href="index.html"><li><b>HOME</b></li></a>
+            <a href=""><li><b>ABOUT ME</b></li></a>
+            <a href="blog.html"><li><b>MY BLOG</b></li></a>
         </ul>
     </nav>
 <!-- - - - NAVBAR - - - -->
