--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="index.html"><li><b>HOME</b></li></a>
             <a href="#aboutme"><li><b>ABOUT ME</b></li></a>
             <a href="blog.html"><li><b>MY BLOG</b></li></a>
+            <a href="portofolio.html"><li><b>MY PORTOFOLIO</b></li></a>
         </ul>
     </nav>
     <!-- NAVBAR 1 -->
