--- a/portofolio.html
+++ b/portofolio.html
@@ -13,7 +13,7 @@
     <nav> 
         <ul> 
             <a href="index.html"><li><b>HOME</b></li></a>
-            <a href=""><li><b>ABOUT ME</b></li></a>
+            <a href="#aboutme"><li><b>ABOUT ME</b></li></a>
             <a href="blog.html"><li><b>MY BLOG</b></li></a>
             
         </ul>
